[package]
name = "quiverdb-tui"
description = "The Quiver retro terminal cockpit (an API client)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
anyhow = { workspace = true }
crossterm = { workspace = true }
ratatui = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }

[dev-dependencies]
# Path-only (no version) so `cargo publish` omits this internal dev-dependency
# (quiver-server depends on quiver-tui); tests still resolve it via the path.
quiver-server = { path = "../quiver-server", package = "quiverdb-server" }
tempfile = { workspace = true }

[lints]
workspace = true

[lib]
name = "quiver_tui"
