[project]
name = "quiver-client"
version = "0.9.0"
description = "Python client for Quiver, the security-first vector database."
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-only"
authors = [{ name = "Achref Soua", email = "achref.soua@outlook.com" }]
keywords = ["vector-database", "ann", "embeddings", "quiver"]
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
# Client-side payload encryption (quiver.encryption). Install with
# `pip install quiver-client[encryption]`.
encryption = ["pynacl>=1.5"]
# The LangChain VectorStore adapter (quiver.langchain). Install with
# `pip install quiver-client[langchain]`.
langchain = ["langchain-core>=1.0"]
# The LlamaIndex VectorStore adapter (quiver.llamaindex). Install with
# `pip install quiver-client[llamaindex]`.
llamaindex = ["llama-index-core>=0.11"]

[project.urls]
Repository = "https://github.com/achref-soua/quiver"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quiver"]

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
    "pynacl>=1.5",
    "langchain-core>=1.0",
    "llama-index-core>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
