# Its own workspace so the image/rasterizer dependencies stay isolated from the
# main `cargo`/`deny`/`audit` gate and the shipped crates (ADR-0036).
[workspace]

[package]
name = "cockpit-shots"
version = "0.0.0"
edition = "2024"
publish = false
description = "Dev-only: render the Quiver cockpit screens to PNG screenshots."

[dependencies]
quiver-tui = { path = "../../crates/quiver-tui", package = "quiverdb-tui" }
ratatui = "0.30"
image = "0.25"
ab_glyph = "0.2"
